<resources>
    <string name="app_name">ارزیابی</string>
    <string name="error_no_image_selected">هیچ تصویری انتخاب نشده است ، لطفاً دوباره امتحان کنید.</string>
    <string name="error_incorrect_selection">شما یک فیلد معتبر انتخاب نکرده اید. لطفاً تا زمانی که خطوط به رنگ آبی نباشد ، تصحیح کنید.</string>
    <string name="brightness">درخشش:</string>
    <string name="contrast">کنتراست:</string>
    <string name="crop">برش</string>
    <string name="accepted">تایید</string>
    <string name="final_accepted">تایید نهایی</string>
    <string name="close">بستن</string>
    <string name="document_received">مدارکی که تا کنون دریافت شده است:</string>
    <string name="to_continue">جهت ادامه یکی از عملیات های زیر را انتخاب کنید:</string>
    <string name="open_camera">بازکردن دوربین</string>
    <string name="pick_an_image">برگزیدن عکس</string>
    <string name="download">بارگیری</string>
    <string name="upload">بارگذاری</string>
    <string name="upload_image">بارگذاری عکس</string>
    <string name="paper">مدارک</string>
    <string name="choose_document">انتخاب مدرک</string>
    <string name="select_source">تصویر را از کجا انتخاب میکنید؟</string>
    <string name="gallery">گالری</string>
    <string name="camera">دوربین</string>
    <string name="camera_folder">/AbfaCamera/</string>
    <string name="audio_folder">/AbfaAudioRecord/</string>
    <string name="map_folder">/OfflineMap/</string>
    <string name="pdf_folder">temp_pdf.pdf</string>
    <string name="save_format_name">yyyyMMdd_HHmmss</string>
    <string name="save_format_name_melli">yyyyMMdd_HHmmss_SSS</string>
    <string name="exit">خروج</string>
    <string name="form">فرم</string>
    <string name="form1">فرم اولیه</string>
    <string name="form2">فرم امکان فنی</string>
    <string name="owner">مالک</string>
    <string name="phone_number">تلفن</string>
    <string name="request_type">نوع تقاضا</string>
    <string name="id_number">ردیف</string>
    <string name="nation_number">کد ملی</string>
    <string name="mobile_number">موبایل</string>
    <string name="request_date">تاریخ درخواست</string>
    <string name="account_number">اشتراک</string>
    <string name="license">پروانه</string>
    <string name="open">بازکردن منو</string>
    <string name="username">نام کاربری</string>
    <string name="password">گذرواژه</string>
    <string name="login">ورود</string>
    <string name="download_document">بارگیری مدارک</string>
    <string name="loading_getting_info">ارتباط با سرویس دهنده</string>
    <string name="loading_connecting">ارتباط با سرور</string>
    <string name="company_site">AbfaIsfahan.ir</string>
    <string name="copy_right">شبکه تارنما سپاهان</string>
    <string name="version">نسخه</string>
    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>
    <string name="message">message</string>
    <string name="dear_user">همکار گرامی!</string>
    <string name="services_is_not_available">سرویس در دسترس  نیست</string>
    <string name="error">خطا</string>
    <string name="error_external_storage_is_not_writable">حافظه خارجی قابلی نوشتن نیست.</string>
    <string name="error_empty">این فیلد باید پر شود.</string>
    <string name="error_format">فرمت وارد شده صحیح نمیباشد.</string>
    <string name="error_empty_all">همه فیلد ها خالی است.</string>
    <string name="error_short_length">.این فیلد کوتاه است</string>
    <string name="error_similar">شماره پرونده و شماره اشتراک مطابق نیستند.</string>
    <string name="error_upload">در بارگذاری اطلاعات خطایی پدید آمد.</string>
    <string name="error_add_document">در افزودن ردیف خطایی پدید آمد.</string>
    <string name="error_Socket">خطادر ارتباط با سرور، لطفا تنظیمات شبکه خود را بررسی و مجدد تلاش کنید</string>
    <string name="error_is_not_match">نام کاربری و گذرواژه با یکدیگر مطابقت ندارند</string>
    <string name="error_passwords_is_not_match">گذرواژه و تکرار آن با یکدیکر مطابق نیستند</string>
    <string name="error_in_record_voice">در ضبظ صدا مشکلی به وجود آمد</string>
    <string name="error_in_play_voice">در پخش صدا مشکلی به وجود آمد</string>
    <string name="error_not_update1">همکار گرامی لطفا نسخه به روز شده اپلیکیشن را از منوی تنظیمات  بخش به روز رسانی دریافت نمایید</string>
    <string name="error_call_backup">همکار گرامی مشکلی در دریافت اطلاعات این بخش به وجود آمد، با پشتیبان بخش اسناد تماس حاصل فرمایید.</string>
    <string name="error_not_auth">ممجوزهای دسترسی به شما اعطا نشده است، با پشتیبان تماس گرفته و از برنامه خارج و مجددا وارد شوید.</string>
    <string name="error_bill_id">شناسه قبض صحیح نمیباشد.</string>
    <string name="error_disconnected">برقراری ارتباط حین جابجایی اطلاعات با خطا مواجه شد</string>
    <string name="error_connection">خطا در جابجایی اطلاعات، اتصالات خود را بررسی و مجدد تلاش کنید.</string>
    <string name="error_unknown">خطای ناشناخته رخ داده است.</string>
    <string name="error_code">\nکد خطا:</string>
    <string name="error_other">در حال حاضر خدمات مقدور نمیباشد، لطفا مجددا تلاش فرمایید.</string>
    <string name="error_internal">با عرض پوزش، سرور در حال به روزرسانی، لطفا دقایقی دیگر امتحان فرمایید.</string>
    <string name="error_input">ورودی های خود را چک کنید.</string>
    <string name="error_change_server">سرور در حال تغییرات است، لطفا منتظر بمانید و در صورت برطرف نشدن مشکل با پشتیبان تماس حاصل فرمایید.</string>
    <string name="error_value">در این منطقه ارزش معاملاتی تعریف نشده است.</string>
    <string name="error_user_password">نام کاربری و گذرواژه در سیستم موجود نیست، لطفا در ورود اطلاعات دقت قرمایید.</string>
    <string name="error_not_update">لطفا نسخه به روز شده اپلیکیشن را از فهرست فوری، بخش به روز رسانی دریافت نمایید.</string>
    <string name="error_preparing">مشکلی در فرآیند آماده سازی روی داده است</string>
    <string name="error_android_version">نسخه اندروید شما این ویژگی را پشتیبانی نمی کند</string>
    <string name="location">کروکی</string>
    <string name="crooki">ویرایش کروکی</string>
    <string name="setting">تنظیمات برنامه</string>
    <string name="setting_">تنظیمات</string>
    <string name="setting_gps">تنظیمات جی پی اس</string>
    <string name="gps_question">مکان یابی شما غیر فعال است ،آیا مایلید به قسمت تنظیمات مکان یابی منتقل شوید</string>
    <string name="close_app">بستن برنامه</string>
    <string name="call_operator">"لطفا با پشتیبان سیستم تماس حاصل فرمایید"</string>
    <string name="delete">حذف با موفقیت انجام شد</string>
    <string name="upload_success">بارگذاری با موفقیت انجام شد</string>
    <string name="send">ارسال</string>
    <string name="receive">دریافت</string>
    <string name="force_close">مجوز ها کامل نیست</string>
    <string name="permission_not_completed">بستن برنامه</string>
    <string name="base_information">اطلاعات پایه</string>
    <string name="final_information">اطلاعات نهایی</string>
    <string name="map_information">اطلاعات نقشه</string>
    <string name="information">information</string>
    <string name="address">نشانی</string>
    <string name="services">خدمات</string>
    <string name="zone">منطقه</string>
    <string name="user_type">کاربری</string>
    <string name="sifoon_100">سیفون 100</string>
    <string name="sifoon_200">سیفون 200</string>
    <string name="sifoon_125">سیفون 125</string>
    <string name="sifoon_150">سیفون 150</string>
    <string name="ayan_maskooni">اعیان مسکونی</string>
    <string name="number_maskooni">تعداد واحد مسکونی</string>
    <string name="zarfiat_qaradadi">ظرفیت قراردادی</string>
    <string name="adam_taxfif_ab">عدم تخفیف آب</string>
    <string name="phone">تلفن ثابت</string>
    <string name="nation_code">کد ملی</string>
    <string name="name">نام</string>
    <string name="father_name">نام پدر</string>
    <string name="eshterak">اشتراک</string>
    <string name="sms_phone">شماره پیامک ها</string>
    <string name="shomare_peygiri">شماره پیگیری</string>
    <string name="noe_vagozari">نوع واگذاری</string>
    <string name="arse_kol">عرصه کل</string>
    <string name="bill_id">شناسه قبض</string>
    <string name="neighbour_bill_id">ش. قبض همسایه</string>
    <string name="other_number">تعداد واحد سایر</string>
    <string name="postal_code">کد پستی</string>
    <string name="canceled">عملیات متوقف شد.</string>
    <string name="waiting">لطفا صبر کنید…</string>
    <string name="waiting_for_routing">لطفا صبر کنید، در حال مسیریابی…</string>
    <string name="turn_internet_on">اینترنت وصل نیست، اینترنت وایفای یا همراه خود را روشن کنید.</string>
    <string name="access_denialed">مجوز رد شد \n</string>
    <string name="taxfif_number">تعداد تخفیف</string>
    <string name="not_found">موردی یافت نشد!</string>
    <string name="next">بعدی</string>
    <string name="previous">قبلی</string>
    <string name="moshakhasat_melk">مشخصات ملک</string>
    <string name="second_form">اطلاعات امکان فنی</string>
    <string name="moshakhasat_malek">مشخصات مالک</string>
    <string name="done">انجام شد</string>
    <string name="sodur_date">تاریخ صدور پروانه</string>
    <string name="parvane_number">شماره پروانه</string>
    <string name="pelak">شماره پلاک ثبتی</string>
    <string name="aian_kol">اعیان کل</string>
    <string name="aian_non_maskouni">اعیان تجاری</string>
    <string name="tedad_tejari">تعداد واحد تجاری</string>
    <string name="arzesh_mantaghe">ارزش معاملاتی</string>
    <string name="qotre_ensheab">قطر انشعاب</string>
    <string name="noe_takhfif">نوع تخفیف</string>
    <string name="adame_takhfif_fazelab">عدم تخفیف فاضلاب</string>
    <string name="ensheab_gheire_daem">انشعاب غیردائم</string>
    <string name="select_service">حداقل یکی از سرویس ها را انتخاب کنید.</string>
    <string name="empty_masir">مسیری برای تخلیه وجود ندارد</string>
    <string name="empty_download">مسیری برای بارگیری وجود ندارد</string>
    <string name="_031">031</string>
    <string name="shenasname">ش. شناسنامه</string>
    <string name="family">نام خانوادگی</string>
    <string name="radif">ردیف</string>
    <string name="_09">09</string>
    <string name="description">توضیحات</string>
    <string name="to_exit_reback">برای خروج دوباره بازگشت را بزنید.</string>
    <string name="is_peymayesh">این مسیر پیمایش شده است.</string>
    <string name="save_info">ذخیره اطلاعات</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="accepted_question">درصورت تایید، امکان ویرایش وجود نخواهد داشت. آیا تایید میکنید؟</string>
    <string name="map_description">برای ایجاد چند ضلعی، چندین بار بر روی نقشه ضربه بزنید.\n\nبرای تعیین محل، کنتور انگشت خود را چند لحظه روی محل نگه دارید.\n\nبعد از تعیین محل کنتور، برای تعیین محل سیفون، مجددا انگشت خود را چند لحظه روی محل نگه دارید.</string>
    <string name="home">خانه</string>
    <string name="distance_water_network">فاصله تا شبکه آب</string>
    <string name="distance_fazelab_network">فاصله تا شبکه فاضلاب</string>
    <string name="khaki">بخش خاکی</string>
    <string name="noe_shoql">نوع شغل</string>
    <string name="tedad_vahed">واحد</string>
    <string name="vahed_mohasebe">واحد م</string>
    <string name="a_2">مقدار</string>
    <string name="zero">0</string>
    <string name="search">جستجو</string>
    <string name="gozar">گذر</string>
    <string name="block">بلوک</string>
    <string name="maskooni">مسکونی</string>
    <string name="tejari">تجاری</string>
    <string name="edari_dolati">اداری-دولتی</string>
    <string name="omoumi">عمومی و عام المنفعه</string>
    <string name="sanati">صنعتی</string>
    <string name="hotel">هتل</string>
    <string name="counting">محاسبه</string>
    <string name="start_date">تاریخ ارزیابی</string>
    <string name="parcels">پارسل</string>
    <string name="water_pipe">لوله آب</string>
    <string name="water_transfer">شبکه انتقال آب</string>
    <string name="sanitation_transfer">شبکه انتقال فاضلاب</string>
    <string name="add_document">افزودن ردیف</string>
</resources>