<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.forms.MapDescriptionFragment">

    <TextView
        android:id="@id/text_view_title"
        style="@style/Title"
        android:layout_centerHorizontal="true"
        android:text="@string/location" />

    <RelativeLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relative_layout"
        android:layout_below="@id/text_view_title"
        android:background="@drawable/border_gray_2"
        android:padding="@dimen/medium_dp">

        <EditText
            android:id="@+id/edit_text_description"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/low_dp"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:padding="@dimen/medium_dp"
            tools:ignore="Autofill,LabelFor" />

        <LinearLayout
            android:id="@+id/linear_layout_attribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_description"
            android:layout_margin="@dimen/low_dp"
            android:background="@drawable/border_white_1"
            android:orientation="horizontal"
            android:padding="@dimen/low_dp"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/checkboxParcels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcels" />

            <CheckBox
                android:id="@+id/checkboxWaterPipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_pipe" />

            <CheckBox
                android:id="@+id/checkboxWaterTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_transfer" />

            <CheckBox
                android:id="@+id/checkboxSanitationTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanitation_transfer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linear_layout_attribute"
            android:layout_marginStart="@dimen/low_dp"
            android:layout_marginTop="@dimen/low_dp"
            android:layout_marginEnd="@dimen/low_dp"
            android:layout_marginBottom="@dimen/low_dp"
            android:background="@drawable/border_gray_3"
            android:padding="@dimen/low_dp">

            <com.esri.arcgisruntime.mapping.view.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_view_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_attribute"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/low_dp"
            android:padding="@dimen/low_dp"
            android:src="@drawable/refresh"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_attribute"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/low_dp"
            android:padding="@dimen/low_dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/medium_dp"
        android:layout_marginBottom="@dimen/medium_dp">

        <Button
            android:id="@+id/button_pre"
            style="@style/Button.Negative"
            android:text="@string/previous" />

        <Button
            android:id="@+id/button_edit_crooki"
            style="@style/Button.Positive"
            android:layout_alignParentEnd="true"
            android:text="@string/crooki" />
    </RelativeLayout>

</RelativeLayout>