<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.forms.TakeSingleFragment">


    <TextView
        android:id="@id/text_view_title"
        style="@style/Title"
        android:layout_centerHorizontal="true"
        android:text="@string/location" />

    <RelativeLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relative_layout"
        android:layout_below="@id/text_view_title"
        android:background="@drawable/border_gray_2"
        android:padding="@dimen/medium_dp">




    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/medium_dp"
        android:layout_marginBottom="@dimen/medium_dp">

        <Button
            android:id="@+id/button_pre"
            style="@style/Button.Negative"
            android:text="@string/previous" />

        <Button
            android:id="@+id/button_edit_crooki"
            style="@style/Button.Positive"
            android:layout_alignParentEnd="true"
            android:text="@string/crooki" />
    </RelativeLayout>

</RelativeLayout>